--- a/DynamicArt/DynamicArt-Info.plist
+++ b/DynamicArt/DynamicArt-Info.plist
@@ -39,6 +39,8 @@
 	<string>1</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>UILaunchStoryboardName</key>
+	<string>Launch Screen</string>
 	<key>UIMainStoryboardFile</key>
 	<string>DynamicArt</string>
 	<key>UIPrerenderedIcon</key>
